yoshimi 1.6.0 M

2019-9-9 Will
* ALSA can autoconnect to multiple MIDI inputs :)
  Now uses a comma separated list.
* Moved Jack MIDI aoutconnect to correct place.
  It doesn't work (in either location), but nor
  does V 1.4.1 where it used to, and was first
  implemented.
* BugFix: Config.cpp orphaned cout, cerr, endl
  when 'using' changed in header.
* BugFix: Config.cpp orphaned to_string
  when 'using' changed in header.
* Improved CLI part instrument type controls.

2019-9-8 Will
* BugFix: Loading files failed with mxml V 3.1 :(
* Set version as 1.6.0.1
* CLI can now set instrument comments.

2019-9-7 Will
* CLI can now set instrument type.
* Removed outdated 'Yoshimi Control Numbers.txt'
* Updated 'Yoshimi Control Numbers.ods'

2019-9-6 Will
* A corrupted config file no longer aborts.
  A message is given stating defaults are used.

2019-9-1 Will
* Final doc updates.
* Set release version as 1.6.0
* Merged in bugfix for BSD.

2019-8-30 Will
* Small GUI correction for AddSynth.
* Manual Updates.
* Set version as 1.6.0 rc5

2019-8-24 Will
* Doc updates.
* Minor correction to CLI test list.

2019-8-24 Will
* BugFix: CLI effects out of sync with GUI (and actual)

2019-8-23 Will
* Fixed resonance regression (not recognising point 255)
  Found by Jesper, caused by clash of numeric control
  numbers. 'parameter' now used for point number.
* Improved effects handling/reporting for CLI.
* Set version as 1.6.0 rc3
* BugFix: Crash when cancelling part >1 effect bypass.
* Added missing CLI effect bypass control.
* Set version as 1.6.0 rc4

2019-8-22 Will
* Fixed effects regression (not midi-learning)
  Found by Jesper, and caused by the change from numeric a
  value for the learn fag being changed to an enum with a
  different value.
* Identified midi-learn GUI message control number.
* BugFix: CLI not setting resonance point 1.
  Further resonance issues to resolve.
* Set version as 1.6.0 rc2

2019-8-19 Will
* Added shortcut and ellipsis to GUI Instruments/Search entry.