@@ -4826,6 +4826,18 @@ int CmdInterpreter::commandPart(Parser& input, unsigned char controlType)
         }
         return sendNormal(synth, TOPLEVEL::action::lowPrio, 0, controlType, PART::control::instrumentName, npart, UNUSED, UNUSED, UNUSED, UNUSED, UNUSED, miscmsg);
     }
+    if (input.matchnMove(3,"copyright"))
+    {
+        string name;
+        if (controlType == TOPLEVEL::type::Write)
+        {
+            name = string{input};
+            if (name.size() < 2)
+                return REPLY::value_msg;
+        }
+        unsigned char miscmsg = textMsgBuffer.push(name);
+        return sendNormal(synth, TOPLEVEL::action::lowPrio, 0, controlType, PART::control::instrumentCopyright, npart, UNUSED, UNUSED, UNUSED, UNUSED, UNUSED, miscmsg);
+    }
     if (input.matchnMove(3,"info"))
     {
         string name;
